// hello 服务所用的 message 定义
syntax = "proto3";

package hello;

import "common_messages.proto";

option go_package="../protobuf_gen;protobuf_gen";

// 请求
message HelloRequest {
	string name = 1;
}

// 响应
message HelloResponse {
	common.BaseResponse result = 1;
	string message = 2;
}
