// hello 服务定义
syntax = "proto3";

package hello;

option go_package="../protobuf_gen;protobuf_gen";

import public "hello_messages.proto";

// 服务定义
service Hello {
    // SayHello 方法请求接收 HelloRequest 响应返回 HelloReply
    rpc SayHello (HelloRequest) returns (HelloResponse) {}

    // 服务端流
    rpc SayHelloServerStream(HelloRequest) returns (stream HelloResponse) {}
}
